--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 				</div>
 				<footer class="footer">
 						
-						<p class="footer__copy">© DJI, 2021</p>
+						<p class="footer__copy">© Vanche1, 2021</p>
 					
 				</footer>
 			</div>
@@ -439,10 +439,6 @@
 
 
 	
-
-
-
-  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/fullpage.js"></script>
   <script src="js/scrolloverflow.js"></script>
