--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <title>Mavic 2 pro</title>
   <link rel="stylesheet" type="text/css" href="css/fullpage.css">
   <link rel="stylesheet" href="css/style.min.css">
-  
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=fallback" rel="stylesheet">
 </head>
 <body>
 	
